syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


package ds_plugin_define;

message DsPluginDefine {

     int32 id=1 ;
     string  plugin_name= 2;
     string  plugin_type=3 ;
     optional string   plugin_params=4 ;
     optional string  create_time=5 ;
     optional string  update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsPluginDefineService {
  rpc ListDsPluginDefines(ListDsPluginDefinesRequest) returns (ListDsPluginDefinesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsPluginDefines"
    };
  }

  rpc GetDsPluginDefine(GetDsPluginDefineRequest) returns (DsPluginDefine) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsPluginDefines/*}"
    };
  }

  rpc CreateDsPluginDefine(CreateDsPluginDefineRequest) returns (DsPluginDefine) {
    option (google.api.http) = {
      post: "/v1alpha1/DsPluginDefines"
      body: "DsPluginDefine"
    };
  }

  rpc UpdateDsPluginDefine(UpdateDsPluginDefineRequest) returns (DsPluginDefine) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsPluginDefine.name=DsPluginDefines/*}"
      body: "DsPluginDefine"
    };
  }

  rpc DeleteDsPluginDefine(DeleteDsPluginDefineRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsPluginDefines/*}"
    };
  }
  rpc GetDsPluginDefineByType(GetDsPluginDefineByTypeRequest) returns (GetDsPluginDefineByTypeResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsPluginDefinesByType"
    };
  }
}

// message DsPluginDefine {
// ! This should be defined elsewhere
// }

message ListDsPluginDefinesRequest {


  // The maximum number of items to return.
  int64 page_size = 1;

  int64 page_num = 2;
  optional string search_val=3 ;
}

message ListDsPluginDefinesResponse {
  repeated DsPluginDefine total_list = 1;
  int64 current_page = 2;
  int64 page_size = 3;
  int64 start = 4;
  int64 total = 5;
  int64 total_page = 6;

}

message GetDsPluginDefineRequest {
  // The field will contain name of the resource requested.
  int32 id = 1;
}

message GetDsPluginDefineByTypeRequest {
  // The field will contain name of the resource requested.
  string ui_type = 1;
}
message GetDsPluginDefineByTypeResponse {
  // The field will contain name of the resource requested.
  repeated DsPluginDefine DsPluginDefines = 1;
}

message CreateDsPluginDefineRequest {
  // The parent resource name where the DsPluginDefine is to be created.
  string parent = 1;

  // The DsPluginDefine id to use for this DsPluginDefine.
  string DsPluginDefine_id = 2;

  // The DsPluginDefine resource to create.
  // The field name should match the Noun in the method name.
  DsPluginDefine DsPluginDefine = 3;
}

message UpdateDsPluginDefineRequest {
  // The DsPluginDefine resource which replaces the resource on the server.
  DsPluginDefine DsPluginDefine = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsPluginDefineRequest {
  // The resource name of the DsPluginDefine to be deleted.
  string name = 1;
}
